Melhorando a classe de Orders